--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "bootstrap": "^5.1.3",
     "framer-motion": "^6.2.8",
     "lottie-react": "^2.2.1",
     "react": "^17.0.2",
     "react-awesome-loaders": "^0.1.37",
+    "react-bootstrap": "^2.2.3",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-lazy-named": "^1.2.2",
